# qwewginx

./: Cargo.toml  README.md
examples/: access-log.conf  backend-tls1.conf  backend-tls2.conf  backend.conf  backend1.conf  backend2.conf  echo.conf  forward-proxy.conf  h2.conf  lb-health.conf  lb-https.conf  lb.conf  plugins.conf  proxy-tls.conf  proxy.conf  readme.md  routing.conf  static.conf  stream-only.conf  stream.conf  tls.conf  workers.conf
examples/plugins-cache/hello/0.1.0/: manifest.json  plugin.wasm
examples/static/: index.html  style.css
examples/tls/: gen-certs.sh
qwewginx/: Cargo.toml
qwewginx-core/: Cargo.toml
qwewginx-core/src/: lib.rs  nginx.pest
qwewginx-core/src/config/: ast.rs  error.rs  mod.rs  parser.rs
qwewginx-core/src/plugins/: config_json.rs  host.rs  manifest.rs  master_http.rs  mod.rs  runtime.rs
qwewginx-core/src/server/: access_log.rs  error.rs  health_probe.rs  listen.rs  mod.rs  proxy.rs  static_files.rs  stream.rs  tls.rs  upstream_tls.rs
qwewginx-core/tests/: parse_access_log.rs  parse_echo.rs  parse_forward_proxy.rs  parse_h2.rs  parse_health.rs  parse_lb.rs  parse_plugins.rs  parse_proxy.rs  parse_routing.rs  parse_static.rs  parse_stream.rs  parse_tls.rs  parse_workers.rs
qwewginx-core/wit/: qwewginx-plugin.wit
qwewginx/src/: main.rs
wiki/: README.md  config.md  features.md
