[package]
name = "qwewginx-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.9"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.43", features = ["rt", "macros", "net", "sync", "signal"] }
tracing = "0.1"
