[package]
name = "qwewginx-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.9"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "client", "client-legacy"] }
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
rustls = "0.23"
rustls-pemfile = "2.2"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.43", features = ["rt", "macros", "net", "sync", "signal"] }
tokio-rustls = "0.26"
tracing = "0.1"
