[package]
name = "qwewginx"
version.workspace = true
edition.workspace = true

[[bin]]
name = "qwewginx"
path = "src/main.rs"

[dependencies]
qwewginx-core = { path = "../qwewginx-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
